# caldip

./: .buildinfo  .gitignore  CITATION.cff  LICENSE  README.md  aboutcaldip.html  bottle_stops.html  calculate_tr1050_offset.py  caldip.html  caldip_check_all.py  caldip_plot_all.py  compare_hex_cnv.py  compare_hex_cnv.sh  configuration.html  faq.html  funding.html  generate_all_caldip_plots.sh  generate_stub_yaml.py  generate_stub_yamls.sh  genindex.html  index.html  installation.html  msm142_calc_offset_example.py  objects.inv  outputs.html  py-modindex.html  pyproject.toml  quickstart.html  requirements-dev.txt  requirements.txt  running.html  sbe_hex_reader.py  search.html  searchindex.js
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: docs.yml  docs_deploy.yml  pypi.yml  tests.yml
_modules/: index.html
_modules/caldip/: caldip_functions.html  core.html  plotters.html  readers.html  sbe_hex_reader.html  scaffold.html  tools.html  writers.html
_sources/: caldip.rst.txt  configuration.md.txt  funding.md.txt  installation.md.txt  outputs.md.txt  quickstart.md.txt  running.md.txt
caldip/: __init__.py  _plot.py  _writers.py  caldip_functions.py  caldip_readers.py  core.py  data_loader.py  parameters.py  plotters.py  plotting.py  readers.py  sbe_hex_reader.py  scaffold.py  tools.py  writers.py
caldip/cli/: __init__.py  ctd.py  init.py  instrument.py  plot.py  stats.py
data/proc_calib/msm142_2026/cal_dip/castM4/: 013874_20260403_1302.mat  13840_cal_dip_data_time.cnv  castM4.caldip.yaml
docs/source/: aboutcaldip.rst  bottle_stops.md  caldip.rst  conf.py  configuration.md  faq.md  index.rst  installation.md  outputs.md  quickstart.md  running.md
docs/source/_static/: castM4_summary_statistics.csv
tests/: __init__.py  conftest.py  test__plot.py  test__writers.py  test_caldip_functions.py  test_core.py  test_integration.py  test_normalize_ctd.py  test_nortek_csv.py  test_plotters.py  test_readers.py  test_tools.py  test_writers.py
tests/test_fixtures/proc_calib/msm142_2026/cal_dip/castM4/: castM4.caldip.yaml  msm_142_1_032_1sec.cnv
